infra/traefik/routing/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloud-ext
  namespace: traefik
spec:
  ports:
    - port: 80
      targetPort: 10002

---

apiVersion: v1
kind: Service
metadata:
  name: head-ext
  namespace: traefik
spec:
  ports:
    - port: 80
      targetPort: 10000
